fix: gap between containers

--- a/css/local.css
+++ b/css/local.css
@@ -13,6 +13,7 @@ header > h1 {
 .formdiv {
     flex-wrap: wrap;
     align-items: stretch;
+    --gap: 2rem;
 }
 
 .formdiv > * {
